dropshot/tests/fail/bad_trait_channel19.stderr
error[E0277]: the trait bound `std::string::String: SharedExtractor` is not satisfied
  --> tests/fail/bad_trait_channel19.rs:23:5
   |
23 |     #[channel {
   |     ^ the trait `SharedExtractor` is not implemented for `std::string::String`
   |
   = help: the following other types implement trait `SharedExtractor`:
             dropshot::Path<PathType>
             dropshot::Query<QueryType>
   = note: required for `(std::string::String, WebsocketUpgrade)` to implement `dropshot::extractor::common::RequestExtractor`
note: required by a bound in `ApiEndpoint::<StubContext>::new_for_types`
  --> src/api_description.rs
   |
   |     pub fn new_for_types<FuncParams, ResultType>(
   |            ------------- required by a bound in this associated function
...
   |         FuncParams: RequestExtractor + 'static,
   |                     ^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<StubContext>::new_for_types`

error[E0277]: the trait bound `fn(dropshot::RequestContext<<ServerImpl as MyServer>::Context>, std::string::String, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<Body>, HttpError>> {middle_not_shared_extractor_adapter::<ServerImpl>}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_trait_channel19.rs:23:5
   |
19 |   #[dropshot::api_description]
   |   ---------------------------- required by a bound introduced by this call
...
23 | /     #[channel {
24 | |         protocol = WEBSOCKETS,
25 | |         path = "/test",
26 | |     }]
27 | |     async fn middle_not_shared_extractor(
   | |_________^ unsatisfied trait bound
   |
   = help: the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(dropshot::RequestContext<<ServerImpl as MyServer>::Context>, std::string::String, WebsocketUpgrade) -> impl Future<Output = Result<http::response::Response<Body>, HttpError>> {middle_not_shared_extractor_adapter::<ServerImpl>}`
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`
